--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,10 @@
 ---
-- name: make install directory...
-  become: yes
-  become_user: root
-  file:
-    path: '{{ dumb_init_install_dir }}'
-    state: directory
-    mode: 0755
-
 - name: download...
   become: yes
   become_user: root
   get_url:
-    url: '{{ dumb_init_download_url }}'
-    dest: '{{ dumb_init_install_dir }}/dumb-init'
+    url: '{{ dumb_init_url }}'
+    dest: '{{ dumb_init_exe }}'
     checksum: '{{ dumb_init_checksum }}'
     mode: 0755
 
@@ -20,6 +12,6 @@
   become: yes
   become_user: root
   file:
-    src: '{{ dumb_init_install_dir }}/dumb-init'
-    dest: '{{ dumb_init_install_parent_dir }}/dumb-init'
+    src: '{{ dumb_init_exe }}'
+    dest: '{{ dumb_init_link }}'
     state: link
