--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,5 @@
 ---
-dumb_init_download_url: '{{ dumb_init_url }}/v{{ dumb_init_version }}/dumb-init_{{ dumb_init_version }}_{{ dumb_init_architecture }}'
-dumb_init_install_dir: '{{ dumb_init_install_parent_dir }}/dumb-init-{{ dumb_init_version }}'
-dumb_init_checksum: '{{ dumb_init_checksums[dumb_init_version][dumb_init_architecture] }}'
+dumb_init_url: '{{ dumb_init_mirror }}/v{{ dumb_init_version }}/dumb-init_{{ dumb_init_version }}_{{ dumb_init_arch }}'
+dumb_init_checksum: '{{ dumb_init_checksums[dumb_init_version][dumb_init_arch] }}'
+dumb_init_exe: '{{ dumb_init_install_dir }}/dumb-init-{{ dumb_init_version }}'
+dumb_init_link: '{{ dumb_init_install_dir }}/dumb-init'
