--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,30 +7,27 @@ galaxy_info:
     - MIT
   min_ansible_version: 2.0
   platforms:
-    - name: EL
-      versions:
-        - 7
-    - name: Fedora
-      versions:
-        - 23
-        - 24
-        - 25
-        - 26
-        - 27
-        - 28
-        - 29
-        - 30
-    - name: Ubuntu
-      versions:
-        - xenial
-        - bionic
-    - name: Debian
-      versions:
-        - jessie
-        - stretch
     - name: Alpine
       versions:
         - all
+    - name: Debian
+      versions:
+        - bullseye
+        - buster
+        - stretch
+    - name: EL
+      versions:
+        - 7
+        - 8
+    - name: Fedora
+      versions:
+        - 31
+        - 32
+    - name: Ubuntu
+      versions:
+        - bionic
+        - focal
+        - xenial
 
   galaxy_tags:
     - development
